# EchoFake

./: .gitignore  data.py  eval.ipynb  main.py  playground.ipynb  pyproject.toml  train.py  utils.py
configs/: aasist.json  datasets.json  rawnet2.json  sclw2v.json  w2v.json
models/: __init__.py  aasist.py  rawnet2.py  scl_w2v.py  w2v.py
