[project]
name = "echofake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "lightning>=2.5.2",
    "scikit-learn>=1.7.0",
    "tensorboard>=2.19.0",
    "tensorboardx>=2.6.4",
    "torchaudio>=2.7.1",
    "transformers[torch]>=4.53.0",
]
